# pytest-env

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  tox.ini  tox.toml  whitelist.txt
.github/: CODEOWNERS  FUNDING.yaml  FUNDING.yml  SECURITY.md
.github/workflows/: check.yaml  check.yml  release.yaml  release.yml
src/pytest_env/: __init__.py  plugin.py
tests/: advanced_test_example.py  conftest.py  example.py  example_pytest.ini  template.py  test_advanced_env.py  test_env.py  test_verbose.py  test_version.py
